Issue #818: Update colors and icons
* Issue #818: Fix search bar colours
* Issue #818: Fix pocket tile colours
* Issue #818: Fix background colour
* Issue #818: Fix nav buttons colours
* Issue #818: Use photon colours directly
* Issue #818: Use android-components icons
* Issue #818: Fix search icon colour
* Issue #818: Flip pin icon

--- a/app/src/main/res/color/overlay_button_selector.xml
+++ b/app/src/main/res/color/overlay_button_selector.xml
@@ -4,9 +4,8 @@
    - file, You can obtain one at http://mozilla.org/MPL/2.0/. -->
 
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_enabled="false" android:color="@color/button_disabled"/>
+    <item android:state_enabled="false" android:color="@android:color/transparent"/>
     <item android:state_pressed="true" android:color="@color/button_pressed" />
-    <item android:state_focused="true" android:color="@color/button_focused" />
     <item android:state_checked="true" android:color="@color/button_checked"/>
-    <item android:color="@color/button_default"/>
+    <item android:color="@android:color/transparent"/>
 </selector>
