--- a/app/src/main/res/drawable/pin_selector.xml
+++ b/app/src/main/res/drawable/pin_selector.xml
@@ -4,6 +4,6 @@
    - file, You can obtain one at http://mozilla.org/MPL/2.0/. -->
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_checked="true"
-        android:drawable="@drawable/pin_filled"/>
-    <item android:drawable="@drawable/pin_unfilled"/>
+        android:drawable="@drawable/mozac_ic_pin_filled"/>
+    <item android:drawable="@drawable/mozac_ic_pin"/>
 </selector>
