--- a/app/src/main/res/drawable/turbo_selector.xml
+++ b/app/src/main/res/drawable/turbo_selector.xml
@@ -4,7 +4,7 @@
    - file, You can obtain one at http://mozilla.org/MPL/2.0/. -->
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_checked="true"
-        android:drawable="@drawable/turbo_on"/>
+        android:drawable="@drawable/mozac_ic_rocket_filled"/>
     <item android:state_checked="false"
-        android:drawable="@drawable/turbo_off"/>
+        android:drawable="@drawable/mozac_ic_rocket"/>
 </selector>
