--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -27,13 +27,12 @@
 
     <color name="pocket_onboarding_background">#e60c0c0d</color>
 
-    <color name="button_highlight">#64ffffff</color>
-    <color name="button_default">@color/translucent_tv_ink</color>
-    <color name="button_disabled">@color/tv_ink</color>
-    <color name="button_focused">@color/tv_blue50</color>
+    <color name="button_highlight">#00ffffff</color>
+    <color name="button_default">@android:color/transparent</color>
+    <color name="button_disabled">@android:color/transparent</color>
     <color name="button_pressed">@color/tv_blue60</color>
-    <color name="button_checked">@color/translucent_tv_ink2</color>
-    <color name="button_border">@color/translucent_tv_gray40</color>
+    <color name="button_checked">@color/tv_grey90</color>
+    <color name="button_border">@android:color/transparent</color>
 
     <color name="photonGrey10_a60p">#99F9F9FA</color>
     <color name="photonGrey10_a80p">#CCF9F9FA</color>
