--- a/app/src/main/res/color/overlay_button_border.xml
+++ b/app/src/main/res/color/overlay_button_border.xml
@@ -5,7 +5,7 @@
 
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="true" android:color="@color/button_pressed" />
-    <item android:state_focused="true" android:color="@color/tv_blue50" />
+    <item android:state_focused="true" android:color="@color/button_focus_border" />
     <item android:state_checked="true" android:color="@color/button_checked"/>
-    <item android:color="@color/button_border"/>
+    <item android:color="@android:color/transparent"/>
 </selector>
