--- a/app/src/main/res/drawable/ic_back.xml
+++ b/app/src/main/res/drawable/ic_back.xml
@@ -9,6 +9,6 @@
         android:viewportHeight="24.0"
         android:autoMirrored="true">
     <path
-        android:fillColor="#ffffff"
+        android:fillColor="#000000"
         android:pathData="M21,11H5.914l5.793,-5.793a1,1 0,0 0,-1.414 -1.414l-7.5,7.5a1,1 0,0 0,0 1.414l7.5,7.5a1,1 0,0 0,1.414 -1.414L5.914,13H21a1,1 0,0 0,0 -2Z"/>
 </vector>
