--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -27,15 +27,17 @@
 
     <color name="pocket_onboarding_background">#e60c0c0d</color>
 
-    <color name="button_highlight">#00ffffff</color>
-    <color name="button_default">@android:color/transparent</color>
-    <color name="button_disabled">@android:color/transparent</color>
-    <color name="button_pressed">@color/tv_blue60</color>
-    <color name="button_checked">@color/tv_grey90</color>
-    <color name="button_border">@android:color/transparent</color>
+    <color name="button_pressed">@color/photonBlue60</color>
+    <color name="button_checked">@color/photonGrey90</color>
+    <color name="button_focus_border">@color/photonBlue50</color>
 
     <color name="photonGrey10_a60p">#99F9F9FA</color>
     <color name="photonGrey10_a80p">#CCF9F9FA</color>
+    <color name="photonGrey40_a20p">#33b1b1b3</color>
+
+    <color name="tv_white">#eeeeee</color>
+    <color name="tv_gray2">#a0a0a3</color>
+    <color name="tv_ink">#0c0c15</color>
 
     <!-- via https://github.com/mozilla-mobile/firefox-tv/issues/759#issuecomment-381702769 -->
     <color name="pocket_coral">#EF4056</color>
