Issue #818: Use android-components icons

--- a/app/src/main/res/drawable/ic_settings.xml
+++ b/app/src/main/res/drawable/ic_settings.xml
@@ -4,6 +4,6 @@
         android:viewportWidth="24.0"
         android:viewportHeight="24.0">
     <path
-        android:fillColor="#000000"
+        android:fillColor="#ffffff"
         android:pathData="M20.75,11H17.91a6,6 0,0 0,-1 -2.47l2,-2a1,1 0,0 0,-1.41 -1.41l-2,2a6,6 0,0 0,-2.47 -1V3.25a1,1 0,0 0,-2 0V6.09a6,6 0,0 0,-2.47 1l-2,-2A1,1 0,0 0,5.11 6.52l2,2a6,6 0,0 0,-1 2.47H3.25a1,1 0,0 0,0 2H6.09a6,6 0,0 0,1.06 2.52,1 1,0 0,0 -0.23,0.15L5.11,17.48a1,1 0,1 0,1.41 1.41l1.81,-1.81a1,1 0,0 0,0.15 -0.23A6,6 0,0 0,11 17.91v2.84a1,1 0,0 0,2 0V17.91a6,6 0,0 0,2.47 -1l2,2a1,1 0,0 0,1.41 -1.41l-2,-2a6,6 0,0 0,1 -2.47h2.84a1,1 0,0 0,0 -2ZM8,12a4,4 0,1 1,4 4A4,4 0,0 1,8 12Z"/>
 </vector>
