Issue #906 Remove right nav from settings

--- a/app/src/main/res/layout/browser_overlay_top_nav.xml
+++ b/app/src/main/res/layout/browser_overlay_top_nav.xml
@@ -48,7 +48,8 @@
         android:id="@+id/navButtonSettings"
         style="@style/NavigationButton"
         android:nextFocusLeft="@id/turboButton"
-        android:contentDescription="@string/menu_settings"/>
+        android:contentDescription="@string/menu_settings"
+        android:nextFocusRight="@+id/navButtonSettings"/>
 
     <ImageView
         android:layout_width="wrap_content"
