--- a/app/src/main/res/layout/browser_overlay_top_nav.xml
+++ b/app/src/main/res/layout/browser_overlay_top_nav.xml
@@ -29,6 +29,7 @@
         android:id="@+id/pinButton"
         style="@style/NavigationButton"
         android:src="@drawable/pin_selector"
+        android:scaleX="-1"
         android:contentDescription="@string/pin_label"/>
 
     <org.mozilla.focus.widget.CheckableImageButton
