--- a/app/src/main/res/layout/fragment_pocket_video.xml
+++ b/app/src/main/res/layout/fragment_pocket_video.xml
@@ -70,9 +70,9 @@
         tools:ignore="ContentDescription"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="400dp"
+        android:layout_marginStart="830dp"
         android:focusable="true"
-        android:background="@drawable/pocket_video_mega_tile_background"
+        style="@style/NavigationButton"
         app:layout_constraintBottom_toBottomOf="@+id/headerBackgroundView"
         app:layout_constraintEnd_toEndOf="@+id/headerBackgroundView"
         app:layout_constraintStart_toStartOf="@+id/headerBackgroundView"
