Issue #889: Add dimension for the margins

--- a/app/src/main/res/layout/pocket_video_mega_tile.xml
+++ b/app/src/main/res/layout/pocket_video_mega_tile.xml
@@ -73,7 +73,7 @@
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
                 android:text="@string/pocket_video_feed_failed_to_load"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="@dimen/pocket_video_mega_tile_error_margin"
                 android:textSize="16sp"
                 android:textColor="@color/photonGrey10"
                 android:fontFamily="@string/font_roboto_regular"
@@ -84,8 +84,8 @@
                 android:layout_height="36dp"
                 android:layout_width="89dp"
                 android:text="@string/pocket_video_feed_reload_button"
-                android:layout_marginTop="16dp"
-                android:layout_marginBottom="16dp"
+                android:layout_marginTop="@dimen/pocket_video_mega_tile_error_margin"
+                android:layout_marginBottom="@dimen/pocket_video_mega_tile_error_margin"
                 android:background="@drawable/pocket_megatile_try_again_button"
                 android:textAllCaps="false"
                 android:fontFamily="@string/font_roboto_regular"
