Closes #1111: Add link to expose Pocket megatile error screen

--- a/app/src/main/res/layout/pocket_video_mega_tile.xml
+++ b/app/src/main/res/layout/pocket_video_mega_tile.xml
@@ -90,6 +90,7 @@
                 android:textAllCaps="false"
                 android:fontFamily="@string/font_roboto_regular"
                 android:textSize="14sp"
+                android:nextFocusDown="@+id/tileContainer"
                 />
 
         </LinearLayout>
