--- a/app/src/main/res/layout/pocket_video_mega_tile.xml
+++ b/app/src/main/res/layout/pocket_video_mega_tile.xml
@@ -81,15 +81,10 @@
 
             <Button
                 android:id="@+id/megaTileTryAgainButton"
-                android:layout_height="36dp"
-                android:layout_width="89dp"
+                style="@style/PocketVideoButton"
                 android:text="@string/pocket_video_feed_reload_button"
                 android:layout_marginTop="@dimen/pocket_video_mega_tile_error_margin"
                 android:layout_marginBottom="@dimen/pocket_video_mega_tile_error_margin"
-                android:background="@drawable/pocket_button_background"
-                android:textAllCaps="false"
-                android:fontFamily="@string/font_roboto_regular"
-                android:textSize="14sp"
                 android:nextFocusDown="@+id/tileContainer"
                 />
 
