--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -36,8 +36,9 @@
     <dimen name="pocket_video_item_horizontal_margin">12dp</dimen>
 
     <dimen name="pocket_video_mega_tile_thumbnail_corner_radius">4dp</dimen>
-
     <dimen name="pocket_video_mega_tile_error_margin">16dp</dimen>
+    <dimen name="pocket_video_mega_tile_button_width">80dp</dimen>
+    <dimen name="pocket_video_mega_tile_button_height">36dp</dimen>
 
     <!-- This value was chosen experimentally: see usages for criteria. -->
     <dimen name="browser_overlay_delta_scroll_padding">50dp</dimen>
