Closes #1178, #1249: make empty tile container unfocusable
- Also fixes 1249, which at times led to the unpin icon from being out of sync with the state

--- a/app/src/main/res/layout/browser_overlay.xml
+++ b/app/src/main/res/layout/browser_overlay.xml
@@ -73,8 +73,7 @@
                 android:layout_marginBottom="24dp"
                 android:background="@drawable/pocket_video_mega_tile_background"
                 android:focusable="true"
-                android:nextFocusUp="@id/navUrlInput"
-                android:nextFocusDown="@+id/tileContainer" />
+                android:nextFocusUp="@id/navUrlInput" />
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/tileContainer"
