--- a/app/src/main/res/layout/browser_overlay.xml
+++ b/app/src/main/res/layout/browser_overlay.xml
@@ -2,6 +2,7 @@
    - License, v. 2.0. If a copy of the MPL was not distributed with this
    - file, You can obtain one at http://mozilla.org/MPL/2.0/. -->
 <org.mozilla.focus.browser.BrowserNavigationOverlayScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/overlayScrollView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -39,7 +40,9 @@
             </LinearLayout>
 
             <!-- An explicit nextFocusUp seems necessary to make up work consistently.
-            Drawable tinted in code (XML needs API 23+). -->
+            Drawable tinted in code (XML needs API 23+).
+
+            android:importantForAutofill (XML needs API 26+) requires tools:ignore="UnusedAttribute" for lint check -->
             <org.mozilla.focus.widget.InlineAutocompleteEditText
                 android:id="@+id/navUrlInput"
                 android:layout_width="498dp"
@@ -53,6 +56,7 @@
                 android:hint="@string/urlbar_hint"
                 android:imeOptions="actionGo|flagNoExtractUi|flagNoFullscreen"
                 android:importantForAutofill="no"
+                tools:ignore="UnusedAttribute"
                 android:inputType="textUri"
                 android:lines="1"
                 android:nextFocusRight="@id/navUrlInput"
