--- a/app/src/main/res/layout/browser_overlay_top_nav.xml
+++ b/app/src/main/res/layout/browser_overlay_top_nav.xml
@@ -36,6 +36,13 @@
         style="@style/NavigationButton"
         android:src="@drawable/turbo_selector"
         android:contentDescription="@string/turbo_mode"
+        android:nextFocusRight="@+id/desktopModeButton"/>
+
+    <org.mozilla.tv.firefox.widget.CheckableImageButton
+        android:id="@+id/desktopModeButton"
+        style="@style/NavigationButton"
+        android:src="@drawable/mozac_ic_device_desktop"
+        android:contentDescription="@string/"
         android:nextFocusRight="@+id/navButtonSettings"/>
 
     <View
@@ -47,7 +54,7 @@
     <ImageButton
         android:id="@+id/navButtonSettings"
         style="@style/NavigationButton"
-        android:nextFocusLeft="@id/turboButton"
+        android:nextFocusLeft="@id/desktopModeButton"
         android:contentDescription="@string/menu_settings"
         android:nextFocusRight="@+id/navButtonSettings"/>
 
