--- a/app/src/main/res/layout/pocket_video_mega_tile.xml
+++ b/app/src/main/res/layout/pocket_video_mega_tile.xml
@@ -5,7 +5,7 @@
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="org.mozilla.tv.firefox.MainActivity"
-    tools:parentTag="org.mozilla.tv.firefox.home.pocket.PocketVideoMegaTile">
+    tools:parentTag="org.mozilla.tv.firefox.pocket.PocketVideoMegaTile">
 
     <!-- To ensure this lays out consistently, we declare some attributes in code.
 
